testsuite/tests/properties/invalid_no/test.out
== Correct code ==
Code generation was successful

== Incorrect No usage ==
Error: Invalid type for Null expression: Integer
In definition of property 'prop', class 'BarNode': test.py Line 31

Done
